cabal-version:      3.4
name:               snake
version:            0.1
extra-source-files: README.md

library
  exposed-modules:  Snake
  hs-source-dirs:   src
  build-depends:    base, aeson, containers, bytestring, random, gloss
  default-language: Haskell2010

executable snake
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    snake, base
  default-language: Haskell2010

test-suite snake-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    snake, base, hspec, QuickCheck, silently
  default-language: Haskell2010
